--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -15,8 +15,6 @@
   }
   background-color: white;
   border-radius: 30px;
-  position: relative;
-  bottom: 154px;
 }
 
 .navigation .btn {
