--- a/app/assets/stylesheets/components/_page.scss
+++ b/app/assets/stylesheets/components/_page.scss
@@ -101,3 +101,18 @@
 .moon-data p {
   font-weight: 600;
 }
+
+.day-nav {
+  position: relative;
+  bottom: 149px;
+}
+
+.month-page {
+  position: relative;
+  bottom: 34px;
+}
+
+.stats-page {
+  position: relative;
+  top: 29px;
+}
