--- a/app/assets/stylesheets/month/_month.scss
+++ b/app/assets/stylesheets/month/_month.scss
@@ -7,6 +7,8 @@
   background-color: $moon-light-gray;
   text-align: center;
   border: 0 !important;
+  position: relative;
+  bottom: 11px;
 }
 
 .simple-calendar thead {
